--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ idna==3.10
 importlib_metadata==8.7.0
 importlib_resources==6.5.2
 itsdangerous==2.2.0
+jalali_core==1.0.0
+jdatetime==5.2.0
 Jinja2==3.1.6
 jsonschema==4.25.0
 jsonschema-specifications==2025.4.1
